# kiv-ups

./: CMakeLists-raylib_cpp.txt  CMakeLists.txt  README.md
bonus_2/: CMakeLists.txt
bonus_2/src/: main.c
client_c/: client  client.c  server  server.c
go_test/client/: bsd_client  go.mod  main.go
go_test/server/: bsd_server  go.mod  main.go
server/: .gitignore
server/src/: main.cpp
sp/: LICENSE  TODO.md  TODO.txt  msg_list.txt
sp/client/: .gitignore  Makefile  PopupManager.go  UI.go  data.go  drawing.go  gamethread.go  go.mod  go.sum  main.go  main.py  network.go  notes.txt  window.go
sp/client/src/: Data.go  Gamethread.go  Helpers.go  Main.go  PopupManager.go  StateMachine.go  UI.go  data.go  gamethread.go  main.go
sp/client/ups_net/: network.go  serde.go
sp/client/window/: BoundsBox.go  Button.go  Center.go  GameScreen.go  HStack.go  Label.go  Panel.go  PlayerInfo.go  Popup.go  PotDisplay.go  RGComponentInterface.go  TextBox.go  VStack.go  compose.go  window.go
sp/server/: .clang-format  .gitignore  CMakeLists.txt  nc  notes.txt  protocol.txt  test.txt
sp/server/exp/: main.cpp
sp/server/src/: Babel.hpp  CircularBufferQueue.hpp  MainThread.hpp  MessageSerde.cpp  MessageSerde.hpp  PlayerInfo.hpp  PokerScoring.hpp  RoomThread.cpp  RoomThread.hpp  SockPool.hpp  SockWrapper.hpp  main.cpp
src/: main.cpp
